<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FoodDetails">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="false"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="false"
            app:collapsedTitleTextAppearance="@style/AppTheme.Title.Collapsed"
            app:expandedTitleTextAppearance="@style/AppTheme.Title.Expanded"
            app:layout_scrollFlags="scroll|enterAlways|exitUntilCollapsed">

            <ImageView
                android:id="@+id/foodImageVIew"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/avocados_ey"
                android:contentDescription="@string/food_image"
                android:scaleType="centerCrop"
                android:transitionName="@string/food_detail_transition_name" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="bottom|end"
                app:elevation="0dp"
                app:layout_collapseMode="pin">

                <TextView

                    android:id="@+id/txtFoodDetailName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_background"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/default_food_name_placeholder"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/txtFoodDetailOrigin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/origin_placeholder"
            android:textColor="@color/black"

            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtQuantityLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/quantity_placeholder"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="@id/txtFoodDetailOrigin"
            app:layout_constraintTop_toBottomOf="@id/txtFoodDetailOrigin" />

        <TextView
            android:id="@+id/txtNutrients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/nutrients_placeholder"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="@id/txtFoodDetailOrigin"
            app:layout_constraintTop_toBottomOf="@id/txtQuantityLeft" />

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/description_placeholder"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="@id/txtFoodDetailOrigin"
            app:layout_constraintStart_toStartOf="@+id/txtQuantityLeft"
            app:layout_constraintTop_toBottomOf="@+id/txtNutrients" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>